harbor/harbor-ingress-notary_Ingress_harbor.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/proxy-body-size: '0'
    ingress.kubernetes.io/ssl-redirect: 'true'
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
  labels:
    app.kubernetes.io/instance: harbor
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: harbor
    helm.sh/chart: harbor-17.1.0
  name: harbor-ingress-notary
  namespace: harbor
spec:
  ingressClassName: contour
  rules:
  - host: harbor-notary.ocf.berkeley.edu
    http:
      paths:
      - backend:
          service:
            name: harbor-notary-server
            port:
              name: notary-server
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - harbor-notary.ocf.berkeley.edu
    secretName: harbor-notary.ocf.berkeley.edu-tls
